--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <span id="tim">Timer: 0</span>
 
   </center>
-  <script src="main.js"></script>
+  <script src="Main.js"></script>
 </body>
 
 </html>
